--- a/yum.css
+++ b/yum.css
@@ -278,8 +278,9 @@ section{
 
 /* sec03 조와해! end @@@@@@@@@@ */
 #sec04{
-    height: 800px;
+    height: 900px;
 }
+
 #goal_con{
     width: 100%;
     height: 500px;
@@ -298,8 +299,14 @@ section{
 #goal_text{
     margin-top: 35px;
     text-align: center;
-    font-weight: 800;
+    font-weight: 700;
     color: rgb(220, 106, 94);
+}
+
+#front_end{
+    font-weight: 900;
+    font-size: 30px;
+    color: rgb(255, 49, 49);
 }
 
 /* sec04 end @@@@@@@@ */
